[luyuehuan] feat:main layout

--- a/src/style/_extend.scss
+++ b/src/style/_extend.scss
@@ -6,3 +6,12 @@
     width: 80px;
   }
 }
+
+.main_button {
+  border-style: solid;
+  border-color: $primary-color;
+  border-radius: 80px;
+  width: 400px;
+  height: 40px;
+  margin-bottom: 20px;
+}
