--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -20,3 +20,41 @@
     }
   }
 }
+
+main {
+  width: 500px;
+  height: 550px;
+  margin: auto;
+  margin-top: 55px;
+  border: 1px solid $primary-color;
+  border-radius: 10px;
+  padding: 30px;
+  > * {
+    text-align: center;
+  }
+
+  input {
+    width: 400px;
+    height: 50px;
+    margin-top: 40px;
+    background-color: $body-bg;
+    border-style: solid;
+    border-color: $body-bg;
+    border-bottom: 1px solid $primary-color;
+  }
+
+  .password_text {
+    text-align: start;
+    margin: 30px 0px 30px 20px;
+    color: $primary-color;
+  }
+
+  li .main_login {
+    @extend .main_button;
+    @include nav_button_color($body-bg, $primary-color);
+  }
+  li .main_register {
+    @extend .main_button;
+    @include nav_button_color($primary-color, $white);
+  }
+}
